feat: add estimate priority fee endpoint
